# pixel-wallpaper

./: PixelWallpaper_AI_PRD_v1.1.docx  README.md  index.html  package.json  start.bat  start.ps1  vite.config.ts  启动应用.bat
electron/: main.cjs  main.js  preload.cjs  preload.js
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: .gitkeep
src-tauri/src/: main.rs
src/components/: Gallery.vue  Generator.vue  Settings.vue  UsageStats.vue
src/router/: index.ts
src/services/: ai-service.ts  config-service.ts  openai-service.ts  tauri-service.ts  tongyi-service.ts
src/stores/: generator.ts  settings.ts
src/types/: wallpaper.ts
