[package]
name = "pixel-wallpaper"
version = "0.1.0"
description = "PixelWallpaper AI - AI 壁纸生成器"
authors = ["Your Name"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
tauri = { version = "1.6.1", features = ["shell-open", "system-tray"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
base64 = "0.21"
chrono = { version = "0.4", features = ["serde"] }
windows-sys = { version = "0.52", features = ["Win32_UI_WindowsAndMessaging", "Win32_Graphics_Gdi"] }
dirs = "5.0"

[features]
# 默认特性
default = ["custom-protocol"]
# 自定义协议特性，用于生产环境
custom-protocol = ["tauri/custom-protocol"]
