[package]
name = "pixel-wallpaper"
version = "0.1.0"
description = "PixelWallpaper AI - AI 壁纸生成器"
authors = ["Your Name"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1.0"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
windows-sys = { version = "0.59", features = ["Win32_UI_WindowsAndMessaging"] }
dirs = "5.0"
tauri-plugin-shell = "2"

[features]
# 默认特性
default = ["custom-protocol"]
# 自定义协议特性，用于生产环境
custom-protocol = ["tauri/custom-protocol"]
